tests/ui/simple_pattern_2.rs

fn main() {
    1;

    2;

    100;

    101;

    102;
}
